<resources>
    <string name="app_name">CardLinker</string>
    <string name="my_cards">My Cards</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="accept">Accept</string>
    <string name="barcode_of_the_card">Barcode of the card</string>
    <string name="card_title">Card Title</string>
    <string name="take_face_side_card_b">Take a picture of the front side of the discount card</string>
    <string name="init_error_text_p1">An error occurred while identifying the unique card code.</string>
    <string name="init_error_text_p2">Make sure that the code is clearly visible in the photo.</string>
    <string name="card_number">Card Number</string>
    <string name="catalog">Catalog</string>
    <string name="cards">Cards</string>
    <string name="messages">Messages</string>
    <string name="menu">Menu</string>
    <string name="problems_text">Do you have any problems with card?</string>
    <string name="contact_us">Contact Us</string>
    <string name="cancel">Cancel</string>
    <string name="recommendations">Recommendations</string>
    <string name="more">More</string>
    <string name="card_support">Card Support</string>
    <string name="profile">Profile</string>
    <string name="inp_old_pattern">Enter the old pattern</string>
    <string name="inp_old_pattern_small">To change the pattern next</string>
    <string name="inp_old_pattern_new">Enter a new pattern</string>
    <string name="inp_old_pattern_new_small">Which you will enter when\nyou log in to the application</string>
    <string name="inp_new_pattern_new">Enter it again</string>
    <string name="inp_new_pattern_new_small">To confirm the pattern</string>
    <string name="supported_cards">Supported Cards</string>
    <string name="nick_or_email">Nickname or E-mail…</string>
    <string name="already_have_account_quest">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="doesnt_have_account_quest">Doesn\'t have an account? Register</string>
    <string name="tooltip_add_cards">Add your cards to your wallet</string>
    <string name="your_discount_cards_will_be_displayed_here">Your discount cards will be displayed here</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="profile_data_required">The data is required to link the cards to the CardLink account</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="cards_management">Cards Management</string>
    <string name="patterns_are_not_equal">Patterns are not equal,\ntry again</string>
    <string name="pattern_is_wrong">Pattern is wrong,\ntry again</string>
    <string name="your_cards">Your Cards</string>
    <string name="there_is_no_cards_yet">There is no cards yet</string>
    <string name="enter_old_p">Enter the old password</string>
    <string name="password_cr_new">To then create a new one</string>
    <string name="continue_b">Continue</string>
    <string name="current_password">Current Password</string>
    <string name="come_up">Come up with a new password</string>
    <string name="at_least">At least 6 characters</string>
    <string name="new_p">New password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="need_another">Need another account? Register</string>
    <string name="few_symb">Too few symbols</string>
    <string name="lock_protection">Lock Protection</string>
    <string name="pattern_login_small">To log in to the application</string>
    <string name="pattern_login">Set a pattern</string>
    <string name="input_pattern">Input pattern</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete">Delete</string>
    <string name="this_action_cannot_be_undone">This action cannot be undone</string>
</resources>