<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_cards"
        android:enabled="true"
        android:icon="@drawable/card_dr"
        android:title="@string/cards"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_catalog"
        android:enabled="true"
        android:icon="@drawable/document_dr"
        android:title="@string/catalog"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_cashback"
        android:enabled="true"
        android:icon="@drawable/messages_dr"
        android:title="@string/messages"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_menu"
        android:enabled="true"
        android:icon="@drawable/menu_dr"
        android:title="@string/menu"
        app:showAsAction="ifRoom" />
</menu>
