<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/theme_background_color">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/new_change_password_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_dr">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="@dimen/stand_text_size_18sp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/new_enter_p_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/stand_margin_20dp"
        android:layout_marginTop="@dimen/stand_margin_10dp"
        android:text="@string/come_up"
        android:textSize="@dimen/stand_text_size_22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_change_password_toolbar" />

    <TextView
        android:id="@+id/new_to_change_it_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/stand_margin_20dp"
        android:layout_marginTop="@dimen/stand_margin_10dp"
        android:text="@string/at_least"
        android:textColor="@color/text_color_dark"
        android:textSize="@dimen/stand_text_size_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_enter_p_tv" />


    <EditText
        android:id="@+id/new_change_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/stand_margin_20dp"
        android:layout_marginTop="@dimen/stand_margin_40dp"
        android:textColor="@color/white"
        android:background="@drawable/change_password_unfocused_b"
        android:hint="@string/new_p"
        android:padding="@dimen/stand_margin_15dp"
        app:layout_constraintTop_toBottomOf="@+id/new_to_change_it_tv"
        android:textColorHint="@color/grey4_transparent"
        android:inputType="textPassword"
        android:textSize="@dimen/stand_text_size_20sp" />
    <TextView
        android:id="@+id/small_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/stand_text_size_14sp"
        android:text="@string/few_symb"
        android:textColor="@color/primaryRedColor"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/new_change_password_et"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/stand_margin_25dp"
        android:layout_marginTop="@dimen/stand_margin_5dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/new_change_password_continue_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ContinueButtonStyle"
        android:text="@string/continue_b"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/stand_margin_40dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>