<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/theme_background_color"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/nickname_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/nickname_dr"
        android:hint="@string/name"
        android:drawablePadding="@dimen/stand_margin_20dp"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/grey5"
        android:textSize="@dimen/stand_text_size_18sp"
        android:paddingBottom="@dimen/stand_margin_20dp"
        android:inputType="text"
        android:maxLength="30"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/mail_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/email_dr"
        android:hint="@string/e_mail"
        android:drawablePadding="@dimen/stand_margin_20dp"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/grey5"
        android:textSize="@dimen/stand_text_size_18sp"
        android:paddingBottom="@dimen/stand_margin_20dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/stand_margin_15dp"
        android:maxLength="30"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/password_dr"
        android:textSize="@dimen/stand_text_size_18sp"
        android:hint="@string/password"
        android:drawablePadding="@dimen/stand_margin_20dp"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/grey5"
        android:alpha="0.5"
        android:paddingBottom="@dimen/stand_margin_20dp"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/stand_margin_20dp"
        android:maxLength="30"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/does_have_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/stand_text_size_16sp"
        android:textColor="@color/attent_blue_color"
        android:layout_gravity="center"
        android:text="@string/already_have_account_quest"
        android:layout_marginTop="@dimen/stand_margin_15dp"/>
</LinearLayout>