<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background_color">

    <TextView
        android:id="@+id/data_required_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/stand_margin_30dp"
        android:gravity="center"
        android:text="@string/profile_data_required"
        android:textColor="@color/text_color_bright"
        android:textSize="@dimen/stand_text_size_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_dr">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="@dimen/stand_text_size_18sp" />
    </androidx.appcompat.widget.Toolbar>

    <include
        android:id="@+id/profile_data_layout"
        layout="@layout/profile_data_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/stand_margin_15dp"
        android:layout_marginTop="@dimen/stand_margin_25dp"
        android:layout_marginEnd="@dimen/stand_margin_15dp"
        app:layout_constraintTop_toBottomOf="@+id/data_required_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_button"
        style="@style/ContinueButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/stand_margin_30dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>