<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ContainerTheme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/code_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/stand_margin_15dp"
            android:text="@string/barcode_of_the_card"
            android:layout_marginTop="@dimen/stand_margin_10dp"
            android:textSize="@dimen/standp_text_size_24sp" />

        <ImageView
            android:id="@+id/code_iv"
            android:layout_width="@dimen/code_width"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/code_height"
            android:layout_margin="@dimen/stand_margin_10dp"
            tools:background="@drawable/card_field"/>
        <TextView
            android:id="@+id/card_title_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/stand_text_size_18sp"
            android:layout_marginStart="@dimen/stand_margin_10dp"
            android:text="@string/card_title"/>
        <TextView
            android:id="@+id/card_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/stand_text_size_16sp"
            android:textColor="@color/white"
            android:text="ПЯТЁРОЧКА"
            android:layout_margin="@dimen/stand_margin_10dp"/>
        <TextView
            android:id="@+id/card_num_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/stand_text_size_18sp"
            android:layout_marginTop="@dimen/stand_margin_15dp"
            android:layout_marginStart="@dimen/stand_margin_10dp"
            android:text="@string/card_number"/>
        <TextView
            android:id="@+id/card_num_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/stand_text_size_16sp"
            android:textColor="@color/white"
            android:text="1234 5678 9012 3456"
            android:layout_margin="@dimen/stand_margin_10dp"/>
    </LinearLayout>
</FrameLayout>