<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/theme_background_color"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/pattern_lock_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_dr">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/lock_protection"
            android:textColor="@color/white"
            android:textSize="@dimen/stand_text_size_18sp" />
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/input_protection_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/stand_text_size_18sp"
        android:textColor="@color/white"
        android:text="@string/pattern_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/stand_margin_20dp"
        app:layout_constraintTop_toBottomOf="@+id/pattern_lock_toolbar"/>
    <TextView
        android:id="@+id/input_protection_tv_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/stand_text_size_16sp"
        android:textColor="@color/grey5"
        android:text="@string/pattern_login_small"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/stand_margin_10dp"
        app:layout_constraintTop_toBottomOf="@+id/input_protection_tv"/>
    <ImageView
        android:id="@+id/pattern_restore_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pattern_view"
        android:visibility="gone"
        android:layout_marginEnd="@dimen/big_margin_45dp"
        android:src="@drawable/restore_dr" />
    <me.zhanghai.android.patternlock.PatternView
        android:id="@+id/pattern_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:pl_regularColor="@color/white"
        app:pl_successColor="@color/success_color"
        android:layout_marginBottom="@dimen/stand_margin_40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:circularflow_radiusInDP="30"
        app:pl_errorColor="@color/primaryRedColor"/>
</androidx.constraintlayout.widget.ConstraintLayout>